# pidgeons

./: Cargo.toml  README.md  clippy.toml
src/: lib.rs  ops.rs  types.rs
tests/: veripb_examples.rs
